# gphoto2_ros

./: CMakeLists.txt  package.xml
include/gphoto2_ros/: photo.h  photo_camera.hpp  photo_node.h  photo_reporter.hpp
include/photo/: photo_camera.hpp
install/: install_gphoto2_from_src.sh  remove_ubuntu_gphoto2.sh
launch/: launch_camera.launch  launch_camera.launch.autosave
src/libphoto2/: photo_camera.cpp  photo_camera_list.cpp  photo_image.cpp  photo_reporter.cpp
src/photo_node/: photo_node.cpp  photo_node_sim.cpp
src/test_photo/: test_photo.cpp
srv/: DownloadPictures.srv  SetFocus.srv  TriggerCapture.srv
u_power_camera_light/: u_power_camera_light.ino
